# vlm

./: .gitignore  README.md  pyproject.toml
data/: DATA_PLAN.md  clean_trajectories.sh  generate_trajectories.py  prompts.jsonl
data/scripts/: high_school_student_study_room.py
data/trajectory/: __init__.py  env.py  formatter.py  prompts.py  writer.py
eval/: generate.py  mad_scientist_desk_comparison.md  pyproject.toml  serve_lora_generate.sh
eval/logs/: mad_scientist_desk__Qwen_Qwen3.5-4B__attempt1.py  mad_scientist_desk__lora__attempt1.py
train/: blender_dataset.py  train_lora.py
